--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
       <section id="main_content">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Bible Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>The Bible is a canonical collection of texts sacred in Judaism and Christianity. There is no single "Bible" and many Bibles with varying contents exist.The term Bible is shared between Judaism and Christianity, although the contents of each of their collections of canonical texts is not the same. Different religious groups include different books within their Biblical canons, in different orders, and sometimes divide or combine books, or incorporate additional material into canonical books.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code>TESTMENTS/repo_name
+$ OLD TESTMENT 
+$ NEW TESTMENT
 </code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
