--- a/index.html
+++ b/index.html
@@ -56,27 +56,25 @@ $ OLD TESTMENT
 $ NEW TESTMENT
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>ETYMOLOGY</h3>
+
+<p>The English word Bible is from the Latin biblia, from the same word in Medieval Latin and Late Latin and ultimately "the books" Medieval Latin biblia is short for biblia sacra "holy book", while biblia in Greek and Late Latin is neuter plural. It gradually came to be regarded as a feminine singular noun in medieval Latin, and so the word was loaned as a singular into the vernaculars of Western Europe.Latin biblia sacra "holy books".</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>DEVELPOMENT</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>The translation of the Bible into Latin marks the beginning of a parting of the ways between Western Latin-speaking Christianity and Eastern Christianity, which spoke Greek, Syriac, Coptic, Ethiopic, and other languages. The Bibles of the Eastern Churches vary considerably: the Ethiopic Orthodox canon includes 81 books and contains many apocalyptic texts, such as were found at Qumran and subsequently excluded from the Jewish canon. As a general rule, one can say that the Orthodox Churches generally follow the Septuagint in including more books in their Old Testaments than are in the Jewish canon.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>HEBREW BIBLE</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>The Masoretic Text is the authoritative Hebrew text of the Hebrew Bible, or Tanakh. It defines the books of the Jewish canon, and also the precise letter-text of these biblical books, with their vocalization and accentuation.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>TORAH AND NEVIM</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p></p>
       </section>
 
       <footer>
