--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ $ NEW TESTMENT
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>TORAH AND NEVIM</h3>
 
-<p></p>
+<p>The Torah is known as the "Five Books of Moses" or the Pentateuch, meaning "five scroll-cases".The Nevi'im tell the story of the rise of the Hebrew monarchy and its division into two kingdoms, ancient Israel and Judah, focusing on conflicts between the Israelites and other nations,</p>
       </section>
 
       <footer>
