--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 <p>The Bible is a canonical collection of texts sacred in Judaism and Christianity. There is no single "Bible" and many Bibles with varying contents exist.The term Bible is shared between Judaism and Christianity, although the contents of each of their collections of canonical texts is not the same. Different religious groups include different books within their Biblical canons, in different orders, and sometimes divide or combine books, or incorporate additional material into canonical books.</p>
 
-<pre><code>THE TWO TESTMENTS OF BIBLE
-$ OLD TESTMENT 
-$ NEW TESTMENT
+<pre><code>THE TWO TESTAMENTS OF BIBLE
+$ OLD TESTAMENT 
+$ NEW TESTAMENT
 </code></pre>
 
 <h3>
