--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/snehakuruvilla/jesus/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/snehakuruvilla/jesus/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://github.com/snehakuruvilla/jesus/zipball/master" class="zip"><em>Testament</em> .ZIP</a><a href="https://github.com/snehakuruvilla/jesus/tarball/master" class="tgz"><em>download</em> .TGZ</a>
         </span>
       </section>
 
