--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </span>
       </header>
 
-      <section id="downloads">
+      <section id="Testament">
         <span class="inner">
-          <a href="https://github.com/snehakuruvilla/jesus/zipball/master" class="zip"><em>Testament</em> .ZIP</a><a href="https://github.com/snehakuruvilla/jesus/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="http://snehakuruvilla.github.io/OLDTEST/" class="view"><em>Testament</em> view</a><a href="http://snehakuruvilla.github.io/NEWTEST/" class="view"><em>download</em> view</a>
         </span>
       </section>
 
