--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>Jesus</h1>
-            <h2></h2>
+            <h2>our Father</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
       </header>
 
-      <section id="Testament">
+      <section id="downloads">
         <span class="inner">
-          <a href="http://snehakuruvilla.github.io/OLDTEST/" class="view"><em>Testament</em> view</a><a href="http://snehakuruvilla.github.io/NEWTEST/" class="view"><em>download</em> view</a>
+          <a href="http://snehakuruvilla.github.io/OLDTEST/" class="view"><em>Testament</em>.ZIP</a><a href="http://snehakuruvilla.github.io/NEWTEST/" class="view"><em>download</em>.TGZ</a>
         </span>
       </section>
 
