--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="http://snehakuruvilla.github.io/OLDTEST/" class="view"><em>Testament</em>.ZIP</a><a href="http://snehakuruvilla.github.io/NEWTEST/" class="view"><em>download</em>.TGZ</a>
+          <a href="http://snehakuruvilla.github.io/OLDTEST/" class="zip"><em>Testament</em>.ZIP</a><a href="http://snehakuruvilla.github.io/NEWTEST/" class="tgz"><em>download</em>.TGZ</a>
         </span>
       </section>
 
