--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <section id="downloads">
         <span class="inner"> 
-          <a href="http://snehakuruvilla.github.io/OLDTEST/" class="zip"><em>Old Testament</em>.view</a><a href="http://snehakuruvilla.github.io/NEWTEST/" class="tgz"><em>New Testament</em>.TGZ</a>
+          <a href="http://snehakuruvilla.github.io/OLDTEST/" class="zip"><em>Old Testament</em>.view</a><a href="http://snehakuruvilla.github.io/NEWTEST/" class="tgz"><em>New Testament</em>.view</a>
         </span>
       </section>
 
